# llm-cookbook

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cookbooks/: doc_to_md.py  embedding.py  embedding_search.py  langchain_kg.py  ltm.py  react.py  reranking.py  routing.py  tokenization.py
cookbooks/finetune/: README.md  ft_qwen3_lora.yaml  transform.py
examples/: embedding.py  inferences.py  langchain_kg.py  tokenization.py
recipes/: agents.py  doc_to_md.py  embedding.py  file-extract.py  kg.py  kg2.py  ltm.py  multi_agents.py  react.py  rerank.py  reranking.py  routing.py  searching.py  tokenization.py  tools_call.py
