[project]
name = "llm-cookbook"
version = "0.1.0"
description = "LLM Cookbook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "easydict>=1.13",
    "mlx>=0.28.0",
    "mlx-lm>=0.28.2",
    "modelscope==1.29.2",
    "peft>=0.17.0",
    "pynvml>=13.0.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "safetensors>=0.6.2",
    "sentence-transformers>=3.1.1",
    "sentencepiece>=0.2.1",
    "swanlab>=0.6.4",
    "tokenizers>=0.19.1",
    "torchvision>=0.24.0",
    "transformers==4.40.2",
]
